pci-dss/network/cnp-pci-dss-1.2-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: firewall policy
spec:
  endpointSelector:
    matchLabels:
      pod: testpod  #change this label with your label
  ingress:
    - fromEndpoints:
        - matchLabels:
             app: test #use your own pod name
      toPorts:
        - ports:
            - port: "443"
              protocol: any
        - ports:
            - port: "80"
              protocol: any
