pci-dss/network/cnp-pci-dss-1.3.3-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-egress
  namespace: default        #change default namespace to match your namespace
spec:
  description: "This policy will allow outbound connection using kube-dns in port 53"
  endpointSelector:
    matchLabels:
      pod: testpod  #change this label with your label
  egress:
    - toEntities:
        - cluster
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toCIDRSet:
        - cidr: 10.10.10.1/16  #change with your ip address
