pci-dss/network/cnp-pci-dss-1.3.3-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: cnp-pci-dss-1.3.3-ingress
spec:
  description: "This will Block inbound connection from Internet"
  endpointSelector:
    matchLabels:
      pad: testpad
  ingress:
    - fromEntities:
        - cluster
