pci-dss/network/cnp-pci-dss-7.2.3-egress-default-deny-allow-kube-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-egress
spec:
  description: "Engress default deny communicate through port the only 443 and egress flows to Kubernetes DNS will be allowed"
  endpointSelector:
    matchLabels:
      role: restricted
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
