pci-dss/network/cnp-pci-dss-7.2.3-ingress-default-deny.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: deny-all-ingress
spec:
  description: "Ingress default deny communicate through port the only 443"
  endpointSelector:
    matchLabels:
      role: restricted
  ingress:
    - fromEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
